--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -692,14 +692,14 @@ data:
             title: Global Schedule Defaults
             show_header_toggle: false
             entities:
-              - entity: input_datetime.global_morning_start
-                name: Morning Start
-              - entity: input_datetime.global_day_start
-                name: Day Start
-              - entity: input_datetime.global_evening_start
-                name: Evening Start
-              - entity: input_datetime.global_night_start
-                name: Night Start
+              - entity: schedule.scenes_morning
+                name: Morning Schedule
+              - entity: schedule.scenes_day
+                name: Day Schedule
+              - entity: schedule.scenes_evening
+                name: Evening Schedule
+              - entity: schedule.scenes_night
+                name: Night Schedule
     
           # Configuration Selectors
           - type: vertical-stack
@@ -745,8 +745,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bedroom_morning_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bedroom_morning_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bedroom_morning_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bedroom_morning
                       name: Motion Auto-Off (min)
     
@@ -778,8 +778,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bedroom_day_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bedroom_day_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bedroom_day_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bedroom_day
                       name: Motion Auto-Off (min)
     
@@ -811,8 +811,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bedroom_evening_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bedroom_evening_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bedroom_evening_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bedroom_evening
                       name: Motion Auto-Off (min)
     
@@ -844,8 +844,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bedroom_night_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bedroom_night_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bedroom_night_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bedroom_night
                       name: Motion Auto-Off (min)
     
@@ -881,8 +881,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bathroom_morning_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bathroom_morning_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bathroom_morning_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bathroom_morning
                       name: Motion Auto-Off (min)
     
@@ -914,8 +914,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bathroom_day_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bathroom_day_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bathroom_day_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bathroom_day
                       name: Motion Auto-Off (min)
     
@@ -947,8 +947,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bathroom_evening_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bathroom_evening_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bathroom_evening_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bathroom_evening
                       name: Motion Auto-Off (min)
     
@@ -980,8 +980,8 @@ data:
                       name: Scene
                     - entity: input_boolean.bathroom_night_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.bathroom_night_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.bathroom_night_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_bathroom_night
                       name: Motion Auto-Off (min)
     
@@ -1017,8 +1017,8 @@ data:
                       name: Scene
                     - entity: input_boolean.living_room_morning_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.living_room_morning_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.living_room_morning_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_living_room_morning
                       name: Motion Auto-Off (min)
     
@@ -1050,8 +1050,8 @@ data:
                       name: Scene
                     - entity: input_boolean.living_room_day_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.living_room_day_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.living_room_day_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_living_room_day
                       name: Motion Auto-Off (min)
     
@@ -1083,8 +1083,8 @@ data:
                       name: Scene
                     - entity: input_boolean.living_room_evening_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.living_room_evening_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.living_room_evening_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_living_room_evening
                       name: Motion Auto-Off (min)
     
@@ -1116,8 +1116,8 @@ data:
                       name: Scene
                     - entity: input_boolean.living_room_night_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.living_room_night_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.living_room_night_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_living_room_night
                       name: Motion Auto-Off (min)
     
@@ -1153,8 +1153,8 @@ data:
                       name: Scene
                     - entity: input_boolean.kitchen_morning_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.kitchen_morning_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.kitchen_morning_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_kitchen_morning
                       name: Motion Auto-Off (min)
     
@@ -1186,8 +1186,8 @@ data:
                       name: Scene
                     - entity: input_boolean.kitchen_day_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.kitchen_day_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.kitchen_day_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_kitchen_day
                       name: Motion Auto-Off (min)
     
@@ -1219,8 +1219,8 @@ data:
                       name: Scene
                     - entity: input_boolean.kitchen_evening_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.kitchen_evening_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.kitchen_evening_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_kitchen_evening
                       name: Motion Auto-Off (min)
     
@@ -1252,8 +1252,8 @@ data:
                       name: Scene
                     - entity: input_boolean.kitchen_night_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.kitchen_night_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.kitchen_night_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_kitchen_night
                       name: Motion Auto-Off (min)
     
@@ -1289,8 +1289,8 @@ data:
                       name: Scene
                     - entity: input_boolean.hallway_morning_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.hallway_morning_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.hallway_morning_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_hallway_morning
                       name: Motion Auto-Off (min)
     
@@ -1322,8 +1322,8 @@ data:
                       name: Scene
                     - entity: input_boolean.hallway_day_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.hallway_day_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.hallway_day_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_hallway_day
                       name: Motion Auto-Off (min)
     
@@ -1355,8 +1355,8 @@ data:
                       name: Scene
                     - entity: input_boolean.hallway_evening_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.hallway_evening_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.hallway_evening_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_hallway_evening
                       name: Motion Auto-Off (min)
     
@@ -1388,8 +1388,8 @@ data:
                       name: Scene
                     - entity: input_boolean.hallway_night_motion_enabled
                       name: Motion Activated
-                    - entity: input_boolean.hallway_night_auto_on_enabled
-                      name: Auto-On
+                    - entity: input_select.hallway_night_auto_on_mode
+                      name: Auto-On Mode
                     - entity: input_number.motion_auto_off_hallway_night
                       name: Motion Auto-Off (min)
   light_control.yaml: |
