--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -338,6 +338,9 @@ spec:
             - name: scripts
               mountPath: /config/scripts
               readOnly: true
+            - name: packages
+              mountPath: /config/packages/gitops
+              readOnly: true
           lifecycle:
             preStop:
               exec:
@@ -373,3 +376,6 @@ spec:
         - name: scripts
           configMap:
             name: homeassistant-scripts
+        - name: packages
+          configMap:
+            name: homeassistant-packages
