--- a/gitops/apps/home-assistant/helpers-input-boolean-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-boolean-configmap.yaml
@@ -30,38 +30,26 @@ data:
       name: Bathroom - Smooth Transition
       initial: true
     
-    # Per-Slot Motion & Auto-On Configuration
+    # Per-Slot Motion Configuration
     # Morning
     bathroom_morning_motion_enabled:
       name: Bathroom - Morning Motion Enabled
-      initial: false
-    bathroom_morning_auto_on_enabled:
-      name: Bathroom - Morning Auto-On Enabled
       initial: false
     
     # Day
     bathroom_day_motion_enabled:
       name: Bathroom - Day Motion Enabled
       initial: false
-    bathroom_day_auto_on_enabled:
-      name: Bathroom - Day Auto-On Enabled
-      initial: false
     
     # Evening
     bathroom_evening_motion_enabled:
       name: Bathroom - Evening Motion Enabled
-      initial: true
-    bathroom_evening_auto_on_enabled:
-      name: Bathroom - Evening Auto-On Enabled
       initial: true
     
     # Night
     bathroom_night_motion_enabled:
       name: Bathroom - Night Motion Enabled
       initial: true
-    bathroom_night_auto_on_enabled:
-      name: Bathroom - Night Auto-On Enabled
-      initial: false
     
     # Day-of-week helpers (Keep these for granular day skipping if needed)
     # Morning
@@ -182,38 +170,26 @@ data:
       name: Bedroom - Smooth Transition
       initial: true
     
-    # Per-Slot Motion & Auto-On Configuration
+    # Per-Slot Motion Configuration
     # Morning
     bedroom_morning_motion_enabled:
       name: Bedroom - Morning Motion Enabled
-      initial: false
-    bedroom_morning_auto_on_enabled:
-      name: Bedroom - Morning Auto-On Enabled
       initial: false
     
     # Day
     bedroom_day_motion_enabled:
       name: Bedroom - Day Motion Enabled
       initial: false
-    bedroom_day_auto_on_enabled:
-      name: Bedroom - Day Auto-On Enabled
-      initial: false
     
     # Evening
     bedroom_evening_motion_enabled:
       name: Bedroom - Evening Motion Enabled
-      initial: true
-    bedroom_evening_auto_on_enabled:
-      name: Bedroom - Evening Auto-On Enabled
       initial: true
     
     # Night
     bedroom_night_motion_enabled:
       name: Bedroom - Night Motion Enabled
       initial: true
-    bedroom_night_auto_on_enabled:
-      name: Bedroom - Night Auto-On Enabled
-      initial: false
     
     # Day-of-week helpers (Keep these for granular day skipping if needed)
     # Morning
@@ -334,38 +310,26 @@ data:
       name: Hallway - Smooth Transition
       initial: true
     
-    # Per-Slot Motion & Auto-On Configuration
+    # Per-Slot Motion Configuration
     # Morning
     hallway_morning_motion_enabled:
       name: Hallway - Morning Motion Enabled
-      initial: false
-    hallway_morning_auto_on_enabled:
-      name: Hallway - Morning Auto-On Enabled
       initial: false
     
     # Day
     hallway_day_motion_enabled:
       name: Hallway - Day Motion Enabled
       initial: false
-    hallway_day_auto_on_enabled:
-      name: Hallway - Day Auto-On Enabled
-      initial: false
     
     # Evening
     hallway_evening_motion_enabled:
       name: Hallway - Evening Motion Enabled
-      initial: true
-    hallway_evening_auto_on_enabled:
-      name: Hallway - Evening Auto-On Enabled
       initial: true
     
     # Night
     hallway_night_motion_enabled:
       name: Hallway - Night Motion Enabled
       initial: true
-    hallway_night_auto_on_enabled:
-      name: Hallway - Night Auto-On Enabled
-      initial: false
     
     # Day-of-week helpers (Keep these for granular day skipping if needed)
     # Morning
@@ -486,38 +450,26 @@ data:
       name: Kitchen - Smooth Transition
       initial: true
     
-    # Per-Slot Motion & Auto-On Configuration
+    # Per-Slot Motion Configuration
     # Morning
     kitchen_morning_motion_enabled:
       name: Kitchen - Morning Motion Enabled
-      initial: false
-    kitchen_morning_auto_on_enabled:
-      name: Kitchen - Morning Auto-On Enabled
       initial: false
     
     # Day
     kitchen_day_motion_enabled:
       name: Kitchen - Day Motion Enabled
       initial: false
-    kitchen_day_auto_on_enabled:
-      name: Kitchen - Day Auto-On Enabled
-      initial: false
     
     # Evening
     kitchen_evening_motion_enabled:
       name: Kitchen - Evening Motion Enabled
-      initial: true
-    kitchen_evening_auto_on_enabled:
-      name: Kitchen - Evening Auto-On Enabled
       initial: true
     
     # Night
     kitchen_night_motion_enabled:
       name: Kitchen - Night Motion Enabled
       initial: true
-    kitchen_night_auto_on_enabled:
-      name: Kitchen - Night Auto-On Enabled
-      initial: false
     
     # Day-of-week helpers (Keep these for granular day skipping if needed)
     # Morning
@@ -638,38 +590,26 @@ data:
       name: Living Room - Smooth Transition
       initial: true
     
-    # Per-Slot Motion & Auto-On Configuration
+    # Per-Slot Motion Configuration
     # Morning
     living_room_morning_motion_enabled:
       name: Living Room - Morning Motion Enabled
-      initial: false
-    living_room_morning_auto_on_enabled:
-      name: Living Room - Morning Auto-On Enabled
       initial: false
     
     # Day
     living_room_day_motion_enabled:
       name: Living Room - Day Motion Enabled
       initial: false
-    living_room_day_auto_on_enabled:
-      name: Living Room - Day Auto-On Enabled
-      initial: false
     
     # Evening
     living_room_evening_motion_enabled:
       name: Living Room - Evening Motion Enabled
-      initial: true
-    living_room_evening_auto_on_enabled:
-      name: Living Room - Evening Auto-On Enabled
       initial: true
     
     # Night
     living_room_night_motion_enabled:
       name: Living Room - Night Motion Enabled
       initial: true
-    living_room_night_auto_on_enabled:
-      name: Living Room - Night Auto-On Enabled
-      initial: false
     
     # Day-of-week helpers (Keep these for granular day skipping if needed)
     # Morning
