--- a/gitops/apps/home-assistant/helpers-input-select-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-select-configmap.yaml
@@ -49,6 +49,47 @@ data:
         - evening
         - night
       initial: morning
+    
+    # Auto-On Modes
+    bathroom_morning_auto_on_mode:
+      name: Bathroom Morning Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    bathroom_day_auto_on_mode:
+      name: Bathroom Day Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    bathroom_evening_auto_on_mode:
+      name: Bathroom Evening Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Always
+      icon: mdi:alarm-light-outline
+    
+    bathroom_night_auto_on_mode:
+      name: Bathroom Night Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
   bedroom.yaml: |
     # Template for input_select helpers per room
     # Usage:
@@ -95,6 +136,47 @@ data:
         - evening
         - night
       initial: morning
+    
+    # Auto-On Modes
+    bedroom_morning_auto_on_mode:
+      name: Bedroom Morning Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    bedroom_day_auto_on_mode:
+      name: Bedroom Day Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    bedroom_evening_auto_on_mode:
+      name: Bedroom Evening Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Always
+      icon: mdi:alarm-light-outline
+    
+    bedroom_night_auto_on_mode:
+      name: Bedroom Night Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
   hallway.yaml: |
     # Template for input_select helpers per room
     # Usage:
@@ -141,6 +223,47 @@ data:
         - evening
         - night
       initial: morning
+    
+    # Auto-On Modes
+    hallway_morning_auto_on_mode:
+      name: Hallway Morning Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    hallway_day_auto_on_mode:
+      name: Hallway Day Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    hallway_evening_auto_on_mode:
+      name: Hallway Evening Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Always
+      icon: mdi:alarm-light-outline
+    
+    hallway_night_auto_on_mode:
+      name: Hallway Night Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
   kitchen.yaml: |
     # Template for input_select helpers per room
     # Usage:
@@ -187,6 +310,47 @@ data:
         - evening
         - night
       initial: morning
+    
+    # Auto-On Modes
+    kitchen_morning_auto_on_mode:
+      name: Kitchen Morning Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    kitchen_day_auto_on_mode:
+      name: Kitchen Day Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    kitchen_evening_auto_on_mode:
+      name: Kitchen Evening Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Always
+      icon: mdi:alarm-light-outline
+    
+    kitchen_night_auto_on_mode:
+      name: Kitchen Night Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
   living_room.yaml: |
     # Template for input_select helpers per room
     # Usage:
@@ -233,6 +397,47 @@ data:
         - evening
         - night
       initial: morning
+    
+    # Auto-On Modes
+    living_room_morning_auto_on_mode:
+      name: Living Room Morning Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    living_room_day_auto_on_mode:
+      name: Living Room Day Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
+    
+    living_room_evening_auto_on_mode:
+      name: Living Room Evening Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Always
+      icon: mdi:alarm-light-outline
+    
+    living_room_night_auto_on_mode:
+      name: Living Room Night Auto-On Mode
+      options:
+        - Disabled
+        - Always
+        - Weekdays Only
+        - Weekends Only
+      initial: Disabled
+      icon: mdi:alarm-light-outline
   room_selector.yaml: |
     room_selector:
       name: Room Selector
